# dual-arm

./: .gitignore  AGENTS.md  CURRENT_DUAL_ARM_TEST_RUNBOOK_2026-04-15.md  DUALARM_WORKSPACE_READTHROUGH_2026-04-15.md  HARDWARE_CONNECTIVITY_CHECK_2026-04-15.md  MODULE_TEST_PLAN_2026-04-15.md  README.md  SETUP_2026-04-15.md  STATE.md  arm_planner  build_workspace.sh  findings.md  open_fairino_web.sh  progress.md  task_plan.md  use_workspace.sh
.github/workflows/: software-check.yml
FAIRINO-CobotSoftware-LA-V3.7.5.1-20250909/: RELEASE.txt
FAIRINO-CobotSoftware-LA-V3.7.5.1-20250909/software/: MODEL_VERSION.txt
archive/: README.md  legacy-import-manifest.md  vendor-archive-manifest.md
archive/legacy/: README.md
archive/quick_competition_2026-05-08/: COLCON_IGNORE  MIGRATION.md  README.md
arm_planner/src/fairino_dualarm_description/: package.xml
arm_planner/src/fairino_dualarm_description/urdf/: fairino3_v6_macro.xacro  fairino_dualarm.urdf.xacro
arm_planner/src/fairino_dualarm_moveit_config/: CMakeLists.txt  package.xml
arm_planner/src/fairino_dualarm_moveit_config/config/: initial_positions.yaml  ompl_planning.yaml  planning_groups.yaml
arm_planner/src/fairino_dualarm_moveit_config/launch/: move_group.launch.py
arm_planner/src/fairino_dualarm_planner/: CMakeLists.txt  package.xml
arm_planner/src/fairino_dualarm_planner/launch/: fairino_dualarm_planner.launch.py
arm_planner/src/fairino_dualarm_planner/scripts/: fairino_dualarm_planner_node.py
arm_planner/src/fairino_dualarm_planner/src/: fairino_dualarm_planner_node.cpp
config/: README.md
config/competition/: camera_profiles.yaml  handover.yaml  object_geometry.yaml  pouring.yaml  task_thresholds.yaml  workspace_profiles.yaml
config/control/: safety_limits.yaml
config/profiles/: README.md  competition_default.yaml
config/quick_competition/: legacy_bridge.yaml  quick_calibration.yaml  quick_profile.yaml  quick_waypoints.yaml
config/system/: README.md  build_groups.yaml
depth_handler/: CMakeLists.txt  README.md  package.xml
depth_handler/launch/: depth_processor.launch.py
depth_handler/src/: depth_processor_node.cpp
detector/: CMakeLists.txt  package.xml
detector/src/: detector_node.cpp  lw_detr.cpp
docs/: README.md  migration  runbooks
docs/api/: README.md  interfaces.md
docs/architecture/: README.md  control-plane.md  runtime-architecture.md  runtime-authority.md  system_overview.md
docs/archive/: README.md
docs/artifacts/: README.md  model-and-vendor-manifest.md
docs/competition/: README.md  dual-arm-competition-contract-2026-04-18.md  pouring-task-modeling-proxies-2026-04-18.md
docs/development/: README.md  readme-style-guide.md
docs/migration/: 2026-04-16-workspace-unification.md
docs/operations/: README.md
docs/plans/: 2026-04-22-dual-camera-stable-mode-plan.md  2026-05-08-production-runtime-authority-design.md  2026-05-08-right-arm-observe-remember-grasp-design.md
docs/process/: 2026-04-21-integration-529ee00-into-a541952.md  README.md
docs/reference/: README.md  path-migration-map.md  repo-map.md
docs/runbooks/: software-parallel-window-prompts.md  wave-0-1-code-review.md  wave-2-5-acceptance.md
dualarm/launch/: robot_main.launch.py
epg50_gripper_ros/: CMakeLists.txt  package.xml
launch/: README.md  competition.launch.py
robo_ctrl/: CMakeLists.txt
robo_ctrl/launch/: robo_ctrl_L.launch.py  robo_ctrl_R.launch.py
scripts/: README.md  check_path_hardcodes.py  check_readme_coverage.py  check_runtime_authority.py  check_window_sync.sh  print_window_prompt_path.sh  setup_parallel_software_worktrees.sh
scripts/ci/: software_check.sh
scripts/lib/: build_groups.py  paths.sh
scripts/quick/: quick_dry_run.py  quick_hardware_smoke_test.sh  record_waypoint.py
src/bringup/dualarm_bringup/: CMakeLists.txt  package.xml
src/bringup/dualarm_bringup/launch/: competition.launch.py  competition_core.launch.py  competition_integrated.launch.py  competition_rviz.launch.py  debug.launch.py
src/perception/ball_basket_pose_estimator/: CMakeLists.txt  README.md  package.xml
src/perception/ball_basket_pose_estimator/config/: roi_defaults.yaml
src/perception/ball_basket_pose_estimator/launch/: ball_basket_pose_estimator.launch.py
src/perception/ball_basket_pose_estimator/scripts/: ball_basket_pose_estimator_node.py  wave23_perception_acceptance.py
src/perception/detector_adapter/: README.md  package.xml
src/perception/detector_adapter/config/: class_map.yaml
src/perception/detector_adapter/launch/: detector_adapter.launch.py
src/perception/detector_adapter/scripts/: detector_adapter_node.py
src/perception/orbbec_gemini_bridge/: CMakeLists.txt
src/perception/orbbec_gemini_bridge/launch/: orbbec_gemini_bridge.launch.py
src/perception/orbbec_gemini_bridge/scripts/: mock_camera_stream.py  orbbec_gemini_ros_bridge.py
src/planning/grasp_pose_generator/: CMakeLists.txt  package.xml
src/planning/grasp_pose_generator/scripts/: grasp_pose_generator_node.py
src/planning/moveit/fairino_dualarm_moveit_config/: package.xml
src/planning/moveit/fairino_dualarm_moveit_config/config/: joint_limits.yaml  moveit_controllers.yaml
src/planning/moveit/fairino_dualarm_moveit_config/launch/: move_group.launch.py
src/tasks/dualarm_task_manager/: package.xml
src/tasks/dualarm_task_manager/scripts/: behavior_contract.py  dualarm_task_manager_node.py
src/tasks/dualarm_task_manager/scripts/behaviors/: cap_pour_boundary.py  handover_boundary.py
tests/: README.md
tests/acceptance/: README.md
tests/hardware/: README.md
tests/integration/: README.md  test_production_launch_no_raw_console.py  test_quick_dry_run_full_sequence.py  test_static_software_contracts.py
tests/unit/: README.md  test_config_contracts.py  test_console_api_no_raw_motion_in_production.py  test_console_security_contract.py  test_observe_remember_grasp_one_shot_math.py  test_p0_safety_contracts.py  test_p1_crash_contracts.py  test_p1_runtime_stress.py  test_quick_computed_hybrid.py  test_quick_config_contracts.py  test_quick_pose_filter.py  (+4 more)
tools/: CMakeLists.txt
(+390 files in other folders)
