<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fairino_dualarm_moveit_config</name>
  <version>0.1.0</version>
  <description>双臂 MoveIt 运行时配置骨架。</description>

  <maintainer email="gwh@example.com">gwh</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>fairino_dualarm_description</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
